[package]
name = "titanium-core"
version = "1.0.0"
edition = "2021"
description = "Titanium Core (TCORE) - dezentrale Kryptowährung mit Wallet, Miner und P2P-Netzwerk"

[features]
default = ["gui"]
# Die grafische Oberfläche. Für Server-/Headless-Betrieb weglassen:
#   cargo build --release --no-default-features
gui = ["dep:eframe", "dep:egui", "dep:egui_plot"]

[dependencies]
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
egui_plot = { version = "0.29", optional = true }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
ureq = "2"
igd = "0.12"

[profile.release]
opt-level = 3
lto = true
